--- a/index.html
+++ b/index.html
@@ -1,69 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <style>
-        /* reset */
-        * {margin: 0; padding: 0;}
-
-        /* General layout */
-        #wrap {font-size: 20px; color: #fff; text-align: center;}
-        #header {height: 140px;}
-        #banner {height: 450px; line-height: 450px; background: #4dd0e1;}
-        #contents {height: 950px;}
-        #footer {height: 220px;}
-
-        /* layout */
-        #header-top {height: 70px; line-height: 70px; background: #b2ebf2;}
-        #header-nav {height: 70px; line-height: 70px; background: #80deea;}
-        #content1 {height: 90px; line-height: 90px; background-color: #26c6da;}
-        #content2 {height: 480px; line-height: 480px; background-color: #00bcd4}
-        #content3 {height: 380px; line-height: 380px; background-color: #00acc1;}
-        #footer-nav {height: 60px; line-height: 60px; background-color: #0097a7;}
-        #footer-info {height: 160px; line-height: 160px; background-color: #00838f;}
-
-        /* container: smaller box in the middle of the page */
-        .container {width: 1100px; margin: 0 auto; height: inherit; background: rgba(0,0,0,0.3);}
-    </style>
+    <title>Gyuri Hwang</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i'" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
+
 <body>
-    <div id="wrap">
-        <div id="header">
-            <div id="header-top">
-                <div class="container">header-top</div>
-            </div>
-            <div id="header-nav">
-                <div class="container">header-nav</div>
-            </div>
-        </div>
-        <!-- //header -->
-        <div id="banner">
-            <div class="container">banner</div>
-        </div>
-        <!-- banner -->
-        <div id="contents">
-            <div id="content1">
-                <div class="container">content1</div>
-            </div>
-            <div id="content2">
-                <div class="container">content2</div>
-            </div>
-            <div id="content3">
-                <div class="container">content3</div>
-            </div>
-        </div>
-        <!-- //contents -->
-        <div id="footer">
-            <div id="footer-nav">
-                <div class="container">footer-nav</div>
-            </div>
-            <div id="footer-info">
-                <div class="container">footer-info</div>
-            </div>
-        </div>
-        <!-- //footer -->
-    </div>
-    <!-- //wrap -->
+
+  <nav id="nav">
+      <h1>Gyuri Hwang</h1>
+      <ul>
+          <li><a href="#section1">About</a></li>
+          <li><a href="#section2">Portfolio</a></li>
+          <li><a href="#section3">Hobbies</a></li>
+          <li><a href="#section4">menu4</a></li>
+          <li><a href="#section5">menu5</a></li>
+          <li><a href="#section6">menu6</a></li>
+      </ul>
+  </nav>
+
+  <div id="contents">
+      <div id="section1"><h2>Time is <strong>gold</strong></h2></div>
+      <div id="section2"><h2>Seeing is <strong>believing</strong></h2></div>
+      <div id="section3"><h2>Asking costs <strong>nothing</strong></h2></div>
+      <div id="section4"><h2><strong>Better</strong> is to bow than break</h2></div>
+      <div id="section5"><h2><strong>Habit</strong> is second nature</h2></div>
+      <div id="section6"><h2>Pain past is <strong>pleasure</strong></h2></div>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
 </body>
 </html>
