--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
 
   <div id="contents">
-      <div id="section1"><h2>Time is <strong>gold</strong></h2></div>
+      <div id="section1"><h2>Hello is <strong>gold</strong></h2></div>
       <div id="section2"><h2>Seeing is <strong>believing</strong></h2></div>
       <div id="section3"><h2>Asking costs <strong>nothing</strong></h2></div>
       <div id="section4"><h2><strong>Better</strong> is to bow than break</h2></div>
