--- a/portfolio.html
+++ b/portfolio.html
@@ -6,21 +6,21 @@
     <title>Portfolio</title>
 
     <!-- favicon -->
-    <link rel="icon" href="/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/ZEPETO_favicon.png">
+    <link rel="icon" href="ZEPETO_favicon.png">
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i'" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=playfair+display" rel="stylesheet">
 
     <!-- style css import -->
-    <link rel="stylesheet" type="text/css" href="/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/css/portfolio.css"></head>
+    <link rel="stylesheet" type="text/css" href="portfolio.css"></head>
 </head>
 
 <body>
 
   <!-- menu on the top -->
   <nav id="nav">
-    <img src="/Users/gyuri_hwang/Desktop/DALI/website/gyurihwang.me/img/ZEPETO_favicon.png" width="70" height="70">
+    <img src="ZEPETO_favicon.png" width="70" height="70">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
