--- a/realme.html
+++ b/realme.html
@@ -36,7 +36,7 @@
     <p> Our family's love Gungang (means health in Korean) &#128150; </p>
     <div class="slider-wrap">
       <div class="slider-img">
-        <div class="slider"><img src="g1.JPG" alt="image1"></div>
+        <div class="slider"><img src="g1.jpg" alt="image1"></div>
         <div class="slider"><img src="g2.jpg" alt="image2"></div>
         <div class="slider"><img src="g3.jpg" alt="image3"></div>
         <div class="slider"><img src="g4.jpg" alt="image4"></div>
